--- a/tool_server/tool_workers/scripts/launch_scripts/config/all_service.yaml
+++ b/tool_server/tool_workers/scripts/launch_scripts/config/all_service.yaml
@@ -24,7 +24,7 @@ model_worker_config:
       calculate_type: calculate
       cmd:
         script-addr: ../model_workers/qwen2vl_worker.py
-        model-path: "/mnt/petrelfs/share_data/mmtool/weights/qwen-cogcom-filter"
+        model-path: "/mnt/petrelfs/share_data/mmtool/weights/qwen-cogcom-base" # /mnt/petrelfs/share_data/mmtool/weights/qwen-cogcom-filter
         model-name: Qwen2-VL-7B-Instruct
         port: 40001
         host: "0.0.0.0"
